[package]
name = "lovrle_rust_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1

[dependencies]
anyhow = "1.0.80"
konst = "0.3.8"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
proptest = "1.4.0"
